Revision history for Hailo

{{$NEXT}}

0.52 2010-07-18 22:40:02

    - Hailo no longer passes references to itself to its slave
      classes, so it's garbage collected at the right time.

      This bug broke the hybrid disk <-> in_memory SQLite mode, it's
      now fixed again. The test that was supposed to check whether the
      hybrid in-memory backend worked did the opposite of what it was
      supposed to do, and didn't work anyway due to how it was set up.

    - Giving arguments to Hailo's save method (they're passed to the
      Storage class) never worked due to a trivial error. Now it does.

0.51 2010-07-18 15:49:41

    - Bump dependencies for all modules to the latest CPAN
      versions. This avoids the issues Moose had with I<Can't locate
      object method "add_method" via package "Moose::Meta::Role">, and
      various other problems that might be present in older modules.

    - MooseX::Getopt renames its help attribute to help_flag in
      0.30. That broke hailo --help, work around it by checking if the
      help_flag attribute exists in
      any_moose('X::Getopt::GLD')->meta->get_attribute_list. By
      checking we'll also be compatible if Mouse ever switches to the
      new system.

    - Mouse now supports MouseX::StrictConstructor, so we can delete
      code that only used it if we were running under Moose.

    - Put bin/hailo in package hailo, because Moose will whine about
      not exporting sugar to main.

0.50 2010-05-30 12:44:25

    - Hailo hadn't been installed with the hailo command-line script
      since release 0.34. Now it's built with MakeMaker::Awesome 0.08
      with fixes this error.

    - Fix the script compilation test in t/01_compile.t. Test::Script
      renamed its script_compiles function to script_compiles_ok.

0.49 2010-05-29 19:20:26

    - Term::Sk fixed RT #57902 and RT #57903 which I reported. hailo's
      progress bar now looks better as a result.

0.48 2010-05-29 15:16:18
