@@ -2,6 +2,8 @@ Revision history for Hailo
 
 {{$NEXT}}
 
+    - Word tokenizer: Recognize "´" as an apostrophe when matching words.
+
 0.52 2010-07-18 22:40:02
 
     - Hailo no longer passes references to itself to its slave
